--- a/internal/server/templates/character_settings.gohtml
+++ b/internal/server/templates/character_settings.gohtml
@@ -54,11 +54,14 @@
                         <option value="paladin" {{ if eq .Config.Character.Class
                         "paladin" }}selected{{ end }}>Paladin (Leveling)
                         </option>
+                        <option value="sorceress_leveling" {{ if eq .Config.Character.Class
+                        "sorceress_leveling" }}selected{{ end }}>Sorc (Leveling default)
+                        </option>
                         <option value="sorceress_leveling_lightning" {{ if eq .Config.Character.Class
                         "sorceress_leveling_lightning" }}selected{{ end }}>Sorc (Leveling as Lightning)
                         </option>
-                        <option value="sorceress_leveling" {{ if eq .Config.Character.Class
-                        "sorceress_leveling" }}selected{{ end }}>Sorc (Leveling as Fire)
+                        <option value="sorceress_leveling_fire" {{ if eq .Config.Character.Class
+                        "sorceress_leveling_fire" }}selected{{ end }}>Sorc (Leveling as Fire)
                         </option>
                         <option value="trapsin" {{ if eq .Config.Character.Class
                         "trapsin" }}selected{{ end }}>Lightning Trapsin
